syntax = "proto3";

package api;

option go_package = "storage-rpc/pkg/api";

service KeyValueStore {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetPrefix(GetPrefixRequest) returns (GetPrefixResponse);
  rpc Stat(StatRequest) returns (StatResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message GetPrefixRequest {
  string prefix = 1;
}

message GetPrefixResponse {
  repeated KeyValuePair pairs = 1;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message StatRequest {}

message StatResponse {
  uint64 total_sets = 1;
  uint64 total_gets = 2;
  uint64 total_getprefixes = 3;
}
